--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
 			<artifactId>spring-kafka-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.debezium/debezium-connector-postgres -->
+		<dependency>
+			<groupId>io.debezium</groupId>
+			<artifactId>debezium-connector-postgres</artifactId>
+			<version>2.6.0.Alpha1</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
